--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ex magni laborum quo sequi doloribus
         aspernatur ut perferendis deserunt velit voluptas, laudantium fugiat repellat nostrum tenetur vel inventore
         omnis quidem.</p>
+        <h2>for check push shortcut</h2>
 </body>
 
 </html>
